--- a/index.html
+++ b/index.html
@@ -234,6 +234,8 @@ button, select, input, textarea {
     <input id="username" placeholder="Enter your name" style="flex: 1;">
     <select id="timeMode" onchange="resetTestState()">
       <option value="60">1 Minute</option>
+      <option value="120">2 Minutes</option>
+      <option value="180">3 Minutes</option>
       <option value="300">5 Minutes</option>
       <option value="600">10 Minutes</option>
     </select>
